2011-12-19  Valek Filippov

		* Backported 'search list dbl-click' improvement from my other tool.

2011-12-10  Valek Filippov

		* Move some common functions to "utils".
		* CDR: loda-specific search (?rloda#d007), highligh tooltip if 4 bytes match with dict ID.

2011-12-09  Valek Filippov

		* CDR: improved loda and outl parsing

2011-12-07  Valek Filippov

		* CDR: bbox and obbx, initial parsing

2011-11-30  Valek Filippov

		* CDR: fix layer names, loda coords and DISP
		* CDR: start to parse 'arrw' and 'outl'

2011-11-29  Valek Filippov

		* DOC: start to parse *Table

2011-11-28  Valek Filippov

		* DOC: parse FcLcb2k*

2011-11-27  Valek Filippov

		* DOC: parse FcLcb97

2011-11-26  Valek Filippov

		* DOC: start to parse FIBs

2011-11-21  Valek Filippov

		* VSD: fix blocks offset for TextFields in ver6
		* XLS: parse Unicode Lbl names properly ([MS-XLS] is wrong)
		* XLS: start to parse expressions

2011-11-14  Valek Filippov

		* XLS: start to parse Lbl.

2011-11-11  Valek Filippov

		* XLS: add Ptg definitions for future parsing.

2011-11-05  Valek Filippov

		* Little code clean-up.

2011-11-04  Valek Filippov

		* "$esc" was not in Help->Manual.
		* VSD: fix the date.

2011-11-03  Valek Filippov

		* VSD: small addition to TextField, change date to date/time.

2011-10-31  Valek Filippov

		* XLS: parse RK (not sure about RkNum for fint = 0), add 'RK' into search list.

2011-10-28  Valek Filippov

		* Add short manual.

2011-10-26  Valek Filippov

		* Add command history (arrow up/down to navigate)
		* Add row expand/collapse with arrow right/left.

2011-10-25  Valek Filippov

		* VSD: fix ability to save.
		* XLS: preparation for XLS-specific search.
		* XLS: search for cell phase 1.

2011-10-23  Valek Filippov

		* MDB: more fields in table_def.

2011-10-20  Valek Filippov

		* VSD: textfield parsing improvements.
		* VBA: change inflate_vba for XLS.
		* MDB: more fields in table_def.

2011-10-18  Valek Filippov
